- Removed onboarding function, Added customer view file, Enable opt-in for existing loyalty users

--- a/Assets/Admin/Css/style.css
+++ b/Assets/Admin/Css/style.css
@@ -160,6 +160,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  justify-content: center;
   /*.wlopt-copy-button:hover {
     background-color: #f1f1f1;
   }*/
