--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -187,6 +187,7 @@ $border-color: #E7E7EF;
     display: flex;
     align-items: center;
     margin-bottom: 15px;
+    justify-content: center;
 
     .wlopt-copy-label {
       margin-right: 15px;
