- update with new functionality and admin ui

--- a/Assets/Admin/Css/style.css
+++ b/Assets/Admin/Css/style.css
@@ -67,6 +67,83 @@
   border: 1px solid #E7E7EF;
   border-bottom-color: rgb(255, 255, 255);
 }
+#wlopt-main-page #wlopt-customer-page .wlopt-customer-page-holder {
+  background: #FFFFFF;
+  border: 1px solid #E7E7EF;
+  border-radius: 0 8px 8px 8px;
+  height: 80vh;
+  padding: 24px;
+  overflow: scroll;
+}
+#wlopt-main-page #wlopt-customer-page #wlpot-no-customer-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-customer-type-details {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-customer-type-label {
+  font-size: 16px;
+}
+#wlopt-main-page #wlopt-customer-page #wlpot-customer-table {
+  border-collapse: collapse;
+  margin: 24px auto;
+  width: 80%;
+}
+#wlopt-main-page #wlopt-customer-page #wlpot-customer-table tr {
+  border: 1px solid #E7E7EF;
+}
+#wlopt-main-page #wlopt-customer-page #wlpot-customer-table td, #wlopt-main-page #wlopt-customer-page #wlpot-customer-table th {
+  padding: 12px;
+  text-align: center;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-customer-footer {
+  display: flex;
+  justify-content: end;
+  width: 80%;
+  margin: 24px auto;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-customer-list-actions {
+  display: flex;
+  gap: 8px;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-page-actions {
+  display: flex;
+  gap: 4px;
+  border: 1px solid #E5E7EB;
+  border-radius: 0.375rem;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-page-action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #E5E7EB;
+  color: rgb(83, 88, 99);
+  border: 1px solid #E5E7EB;
+  padding: 0.75rem 0.625rem;
+  cursor: pointer;
+  white-space: nowrap;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 550;
+  letter-spacing: 0;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-page-no {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  border-radius: 0.375rem;
+  font-size: 1rem;
+  line-height: 1rem;
+  font-weight: 550;
+  letter-spacing: 0;
+  width: 32px;
+}
 #wlopt-main-page #wlopt-settings .wlopt-enable-optin-label, #wlopt-main-page #wlopt-settings .wlopt-copy-label {
   font-weight: 700;
   font-size: 14px;
