--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -103,6 +103,45 @@ $border-color: #E7E7EF;
       align-items: center;
     }
 
+    .wlopt-customers-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-left: 16px;
+      margin-top: 10px;
+      margin-right: 10px;
+    }
+
+    .wlopt-customers-header .wlopt-customers-heading {
+      margin-left: 10px;
+    }
+
+    .wlopt-customers-header .wlopt-customers-heading p {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 20px;
+      letter-spacing: 0.08em;
+    }
+
+    .wlopt-back-to-apps a {
+      display: flex;
+      min-width: max-content !important;
+      cursor: pointer;
+      align-items: center;
+      justify-content: center;
+      white-space: nowrap;
+      border-radius: 0.375rem;
+      background-color: rgba(79, 71, 235, 1);
+      padding: 0.75rem 0.625rem;
+      font-size: 0.75rem;
+      line-height: 1rem;
+      font-weight: 550;
+      letter-spacing: 0;
+      color: rgba(255, 255, 255, 1);
+      gap: 7px;
+    }
+
     .wlopt-customer-type-label {
       font-size: 16px;
     }
