--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -87,7 +87,7 @@ $border-color: #E7E7EF;
       border-radius: 0 8px 8px 8px;
       height: 80vh;
       padding: 24px;
-      overflow: scroll;
+      overflow-y: scroll;
     }
 
     #wlpot-no-customer-message {
@@ -107,13 +107,6 @@ $border-color: #E7E7EF;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-left: 16px;
-      margin-top: 10px;
-      margin-right: 10px;
-    }
-
-    .wlopt-customers-header .wlopt-customers-heading {
-      margin-left: 10px;
     }
 
     .wlopt-customers-header .wlopt-customers-heading p {
