--- a/Assets/Admin/Css/style.css
+++ b/Assets/Admin/Css/style.css
@@ -119,6 +119,7 @@
   margin-left: 16px;
   margin-top: 10px;
   margin-right: 10px;
+  flex-wrap: wrap;
 }
 #wlopt-main-page #wlopt-customer-page .wlopt-customers-header .wlopt-customers-heading p {
   font-style: normal;
@@ -153,17 +154,19 @@
   justify-content: center;
   white-space: nowrap;
   border-radius: 0.375rem;
-  background-color: rgb(79, 71, 235);
+  background-color: #ececec;
   padding: 0.75rem 2.5rem;
   font-size: 0.75rem;
   line-height: 1rem;
   font-weight: 550;
   letter-spacing: 0;
-  color: rgb(255, 255, 255);
-  gap: 8px;
+  color: #0d1117;
+  gap: 4px;
   border: inherit;
 }
 #wlopt-main-page #wlopt-customer-page .wlopt-active-customer-type {
+  background-color: rgb(79, 71, 235);
+  color: rgb(255, 255, 255);
   opacity: 0.8;
   pointer-events: none;
 }
@@ -256,6 +259,9 @@
 #wlopt-main-page #wlopt-customer-page .wlopt-customer-list-actions {
   display: flex;
   gap: 8px;
+  padding: 4px;
+  border: 1px solid #f1f5f9;
+  border-radius: 0.375rem;
 }
 #wlopt-main-page #wlopt-customer-page .wlopt-page-actions {
   display: flex;
@@ -327,6 +333,7 @@
   justify-content: center;
   align-items: center;
   white-space: nowrap;
+  flex-wrap: wrap;
 }
 #wlopt-main-page #wlopt-settings .wlopt-enable-optin-label, #wlopt-main-page #wlopt-settings .wlopt-copy-label {
   font-weight: 700;
@@ -355,6 +362,7 @@
   justify-content: center;
   align-items: center;
   white-space: nowrap;
+  flex-wrap: wrap;
 }
 #wlopt-main-page #wlopt-settings .wlopt-back-to-apps a {
   display: flex;
@@ -420,6 +428,7 @@
   margin-left: 16px;
   margin-top: 10px;
   margin-right: 10px;
+  flex-wrap: wrap;
 }
 #wlopt-main-page #wlopt-settings .wlopt-settings-header .wlopt-settings-heading p {
   font-style: normal;
