--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -135,6 +135,7 @@ $border-color: #E7E7EF;
       margin-left: 16px;
       margin-top: 10px;
       margin-right: 10px;
+      flex-wrap: wrap;
     }
 
     .wlopt-customers-header .wlopt-customers-heading p {
@@ -172,18 +173,20 @@ $border-color: #E7E7EF;
       justify-content: center;
       white-space: nowrap;
       border-radius: 0.375rem;
-      background-color: rgba(79, 71, 235, 1);
+      background-color: #ececec;
       padding: 0.75rem 2.5rem;
       font-size: 0.75rem;
       line-height: 1rem;
       font-weight: 550;
       letter-spacing: 0;
-      color: rgba(255, 255, 255, 1);
-      gap: 8px;
+      color: #0d1117;
+      gap: 4px;
       border: inherit;
     }
 
     .wlopt-active-customer-type {
+      background-color: rgba(79, 71, 235, 1);
+      color: rgba(255, 255, 255, 1);
       opacity: 0.8;
       pointer-events: none;
     }
@@ -295,6 +298,9 @@ $border-color: #E7E7EF;
     .wlopt-customer-list-actions {
       display: flex;
       gap: 8px;
+      padding: 4px;
+      border: 1px solid #f1f5f9;
+      border-radius: 0.375rem;
     }
 
     .wlopt-page-actions {
@@ -374,6 +380,7 @@ $border-color: #E7E7EF;
       justify-content: center;
       align-items: center;
       white-space: nowrap;
+      flex-wrap: wrap;
     }
   }
 
@@ -409,6 +416,7 @@ $border-color: #E7E7EF;
       justify-content: center;
       align-items: center;
       white-space: nowrap;
+      flex-wrap: wrap;
     }
 
     .wlopt-back-to-apps a {
@@ -480,6 +488,7 @@ $border-color: #E7E7EF;
       margin-left: 16px;
       margin-top: 10px;
       margin-right: 10px;
+      flex-wrap: wrap;
     }
 
     .wlopt-settings-header .wlopt-settings-heading p {
