--- a/Assets/Admin/Css/style.css
+++ b/Assets/Admin/Css/style.css
@@ -154,7 +154,7 @@
   justify-content: center;
   white-space: nowrap;
   border-radius: 0.375rem;
-  background-color: #ececec;
+  background-color: #ffffff;
   padding: 0.75rem 2.5rem;
   font-size: 0.75rem;
   line-height: 1rem;
@@ -162,7 +162,10 @@
   letter-spacing: 0;
   color: #0d1117;
   gap: 4px;
-  border: inherit;
+  border: none;
+}
+#wlopt-main-page #wlopt-customer-page .wlopt-customer-type:hover {
+  background-color: #e5eef7 !important;
 }
 #wlopt-main-page #wlopt-customer-page .wlopt-active-customer-type {
   background-color: rgb(79, 71, 235);
@@ -256,12 +259,14 @@
   width: 80%;
   margin: 24px auto;
 }
+#wlopt-main-page #wlopt-customer-page .wlopt-customer-type-actions {
+  display: flex;
+  border: 1px solid #f1f5f9;
+  border-radius: 0.375rem;
+}
 #wlopt-main-page #wlopt-customer-page .wlopt-customer-list-actions {
   display: flex;
   gap: 8px;
-  padding: 4px;
-  border: 1px solid #f1f5f9;
-  border-radius: 0.375rem;
 }
 #wlopt-main-page #wlopt-customer-page .wlopt-page-actions {
   display: flex;
