--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -173,7 +173,7 @@ $border-color: #E7E7EF;
       justify-content: center;
       white-space: nowrap;
       border-radius: 0.375rem;
-      background-color: #ececec;
+      background-color: #ffffff;
       padding: 0.75rem 2.5rem;
       font-size: 0.75rem;
       line-height: 1rem;
@@ -181,7 +181,11 @@ $border-color: #E7E7EF;
       letter-spacing: 0;
       color: #0d1117;
       gap: 4px;
-      border: inherit;
+      border: none;
+
+      &:hover {
+        background-color: #e5eef7 !important;
+      }
     }
 
     .wlopt-active-customer-type {
@@ -295,12 +299,15 @@ $border-color: #E7E7EF;
       margin: 24px auto;
     }
 
+    .wlopt-customer-type-actions {
+      display: flex;
+      border: 1px solid #f1f5f9;
+      border-radius: 0.375rem;
+    }
+
     .wlopt-customer-list-actions {
       display: flex;
       gap: 8px;
-      padding: 4px;
-      border: 1px solid #f1f5f9;
-      border-radius: 0.375rem;
     }
 
     .wlopt-page-actions {
