--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -229,7 +229,7 @@ $border-color: #E7E7EF;
       width: 1rem;
       height: 1rem;
       fill: #9ca3af;
-      pointer-events: none;
+      pointer-events: auto;
     }
 
     #wlopt-customer-details {
