--- a/Assets/Admin/Css/style.css
+++ b/Assets/Admin/Css/style.css
@@ -103,9 +103,15 @@
 }
 #wlopt-main-page #wlopt-customer-page #wlpot-no-customer-message {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 50vh;
+  font-size: 24px;
+  font-weight: bold;
+}
+#wlopt-main-page #wlopt-customer-page #wlpot-no-customer-message p {
+  font-weight: lighter;
 }
 #wlopt-main-page #wlopt-customer-page .wlopt-customer-type-details {
   display: flex;
