--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -117,9 +117,16 @@ $border-color: #E7E7EF;
 
     #wlpot-no-customer-message {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      height: 50vh;
+      font-size: 24px;
+      font-weight: bold;
+
+      p {
+        font-weight: lighter;
+      }
     }
 
     .wlopt-customer-type-details {
