- change notice position.

--- a/Assets/Admin/Css/style.css
+++ b/Assets/Admin/Css/style.css
@@ -395,17 +395,27 @@
 }
 #wlopt-main-page #wlopt-settings .wlopt-alert-message {
   display: flex !important;
-  align-items: center;
+  align-items: start;
   justify-content: flex-start;
   gap: 8px;
   color: #856404;
   background-color: #fff3cd;
   border-color: #ffeeba;
-  padding: 0.75rem 1.25rem;
+  padding: 1.25rem;
   border-radius: 0.4rem;
   font-weight: 600;
   font-size: 14px;
-  width: fit-content;
+  width: auto;
+}
+#wlopt-main-page #wlopt-settings .wlopt-alert-message div {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+#wlopt-main-page #wlopt-settings .wlopt-alert-message div .wlr-notice-header {
+  font-weight: 600;
+  color: #524949;
+  font-size: 16px;
 }
 #wlopt-main-page #wlopt-settings .wlopt-save-changes {
   background: #4F47EB;
