--- a/Assets/Admin/Css/style.css
+++ b/Assets/Admin/Css/style.css
@@ -405,7 +405,8 @@
   border-radius: 0.4rem;
   font-weight: 600;
   font-size: 14px;
-  width: auto;
+  width: 80%;
+  margin: 24px auto;
 }
 #wlopt-main-page #wlopt-settings .wlopt-alert-message div {
   display: flex;
@@ -414,7 +415,7 @@
 }
 #wlopt-main-page #wlopt-settings .wlopt-alert-message div .wlr-notice-header {
   font-weight: 600;
-  color: #524949;
+  color: #000;
   font-size: 16px;
 }
 #wlopt-main-page #wlopt-settings .wlopt-save-changes {
